fix: prevent alert condition fields from being hidden off-screen
https://gravitee.atlassian.net/browse/APIM-13048
(cherry picked from commit 7dd9b5f5aa432f924c2a5b8ed1414d6ee04e5cb8)

--- a/gravitee-apim-console-webui/src/components/alerts/alert/_alert.scss
+++ b/gravitee-apim-console-webui/src/components/alerts/alert/_alert.scss
@@ -12,6 +12,10 @@
     display: grid;
     flex-direction: row;
     flex-wrap: nowrap;
+
+    md-input-container {
+      min-width: 12.5rem;
+    }
   }
 
   .gv-alerts-alert_trigger-msg {
